# ikuyo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  publish.yml
include/: bridge.h  ikuyo.h
include/common/: bytestream.h  image.h  texture.h
include/format/aft/: farc.h  txp.h
include/format/dds/: dds.h
include/format/ue4/: uexp.h
include/format/unityfs/: assetbundle.h  cab.h
include/interface/: cli.h
jni/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
jni/gradle/wrapper/: gradle-wrapper.properties
jni/src/main/kotlin/ikuyo/: Ikuyo.kt  IkuyoEnum.kt
jni/src/test/kotlin/: IkuyoTest.kt
jni/src/test/resources/: test.dds
src/: bridge.cpp  cli.c
src/common/: bytestream.c  image.c  texture.c
src/common/bridge/: bridge.cpp
src/format/aft/: farc.c  txp.c
src/format/dds/: dds.c
src/format/ue4/: uexp.c
src/format/unity/: assetbundle.c
src/format/unityfs/: assetbundle.c  cab.c
src/interface/: cli.c  jni.c
